--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -56,7 +56,7 @@ jobs:
       env:
         MAVEN_USERNAME: ${{ secrets.MAVEN_CD_USER }}
         MAVEN_PASSWORD: ${{ secrets.MAVEN_CD_PASS }}
-    - run: mkdir staging && cp Plugin/target/*.jar staging
+    - run: mkdir staging && cp target/*.jar staging
     - uses: actions/upload-artifact@v2
       with:
         name: SolarClans
