--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>gg.solarmc</groupId>
+    <parent>
+        <groupId>gg.solarmc</groupId>
+        <artifactId>solar-parent</artifactId>
+        <version>0.6.2</version>
+    </parent>
+
     <artifactId>SolarClans</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -12,7 +17,7 @@
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
         <junit.version>5.7.0</junit.version>
-        <solarapi.version>1.1.7</solarapi.version>
+        <solarapi.version>1.2.0-SNAPSHOT</solarapi.version>
         <loader.version>0.5.1</loader.version>
         <dazzleconf.version>1.2.0-M2</dazzleconf.version>
     </properties>
@@ -31,7 +36,7 @@
     <dependencies>
         <!-- https://github.com/SolarMC-Dev/SolarPaper-API/blob/master/pom.xml -->
         <dependency>
-            <groupId>gg.solarmc</groupId>
+            <groupId>gg.solarmc.paper</groupId>
             <artifactId>solarpaper-api</artifactId>
             <version>${solarapi.version}</version>
         </dependency>
