Change it to PluginHelper and Don't listen on hits if pvp disabled

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,7 +8,7 @@ commands:
     description: Clans Command
     usage: /<command>
   ally:
-    aliases: [a]
+    aliases: [ a ]
     description: Ally Command
     usage: /<command>
-depend: [ Vault, PlaceholderAPI ]
+depend: [ Vault, PlaceholderAPI, WorldGaurd ]
