--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://worldguard.enginehub.org/en/latest/developer/dependency/ -->
+        <dependency>
+            <groupId>gg.solarmc.worldguard</groupId>
+            <artifactId>worldguard-legacy</artifactId>
+            <version>6.2.2</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -108,6 +116,10 @@
         <repository>
             <id>ess-repo</id>
             <url>https://ci.ender.zone/plugin/repository/everything/</url>
+        </repository>
+        <repository>
+            <id>sk89q-repo</id>
+            <url>https://maven.enginehub.org/repo</url>
         </repository>
     </repositories>
 
