--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,7 +31,9 @@ jobs:
   deploy:
   
     runs-on: ubuntu-latest
-    
+    if: github.ref == 'refs/heads/master'
+    needs: build
+
     steps:
     - uses: actions/checkout@v2
     
