--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
         <junit.version>5.7.0</junit.version>
-        <solarapi.version>1.2.0-SNAPSHOT</solarapi.version>
+        <solarapi.version>1.2.1-SNAPSHOT</solarapi.version>
         <loader.version>0.5.2</loader.version>
-        <dazzleconf.version>1.2.0-M2</dazzleconf.version>
+        <dazzleconf.version>1.2.1</dazzleconf.version>
     </properties>
 
     <distributionManagement>
@@ -57,7 +57,7 @@
 
         <!-- https://github.com/MilkBowl/VaultAPI -->
         <dependency>
-            <groupId>com.github.MilkBowl</groupId>
+            <groupId>gg.solarmc.vault</groupId>
             <artifactId>VaultAPI</artifactId>
             <version>1.7</version>
             <scope>provided</scope>
@@ -65,9 +65,9 @@
 
         <!-- https://github.com/PlaceholderAPI/PlaceholderAPI -->
         <dependency>
-            <groupId>me.clip</groupId>
+            <groupId>gg.solarmc.placeholder</groupId>
             <artifactId>placeholderapi</artifactId>
-            <version>2.10.10</version>
+            <version>2.10.10-DEV-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
@@ -115,14 +115,6 @@
         <repository>
             <id>solar-snapshots</id>
             <url>https://mvn-repo.solarmc.gg/snapshots</url>
-        </repository>
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
-        <repository>
-            <id>placeholderapi</id>
-            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
         <repository>
             <id>ess-repo</id>
