--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,4 +11,4 @@ commands:
     aliases: [ a ]
     description: Ally Command
     usage: /<command>
-depend: [ Vault, PlaceholderAPI, WorldGaurd ]
+depend: [ Vault, PlaceholderAPI, WorldGuard ]
