--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
-        <junit.version>5.7.0</junit.version>
+        <junit.version>5.7.1</junit.version>
         <solarapi.version>1.2.1-SNAPSHOT</solarapi.version>
         <loader.version>0.5.2</loader.version>
         <dazzleconf.version>1.2.1</dazzleconf.version>
@@ -97,6 +97,13 @@
             <artifactId>worldguard-legacy</artifactId>
             <version>6.2.2</version>
             <scope>provided</scope>
+
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- https://github.com/filoghost/HolographicDisplays/wiki/Basic-tutorial -->
@@ -107,7 +114,7 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- htt -->
+        <!-- https://github.com/SolarMC-Dev/KOTHPlugin -->
         <dependency>
             <groupId>gg.solarmc.koth</groupId>
             <artifactId>koth</artifactId>
@@ -176,6 +183,18 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-engine</artifactId>
+                        <version>${junit.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
