--- a/pom.xml
+++ b/pom.xml
@@ -117,12 +117,13 @@
         </dependency>
 
         <!-- https://github.com/SolarMC-Dev/ProtocolLib -->
-        <!--<dependency>
+        <!-- TODO: Change this to solar repo -->
+        <dependency>
             <groupId>com.comphenix.protocol</groupId>
             <artifactId>ProtocolLib</artifactId>
             <version>4.7.0</version>
             <scope>provided</scope>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
