Add ClansRelationColor placeholder instead of packet

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,4 +11,4 @@ commands:
     aliases: [ a ]
     description: Ally Command
     usage: /<command>
-depend: [ Vault, PlaceholderAPI, PlayerVaults, WorldGuard, HolographicDisplays, ProtocolLib ]
+depend: [ Vault, PlaceholderAPI, PlayerVaults, WorldGuard, HolographicDisplays ]
