--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>SolarClans</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1_0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
